# image_compressor-

./: CMakeLists.txt
src/: main.cpp
src/core/: compressor.c  compressor.h
src/processor/: image_processor.cpp  image_processor.h  image_processor.hpp
src/tests/: test.cpp
